--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.1",
+    "@web3modal/wagmi": "^3.5.2",
     "axios": "^1.6.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "viem": "^1.21.0",
+    "wagmi": "^1.4.12"
   }
 }
