--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.3",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.1",
     "@web3modal/wagmi": "^3.5.2",
@@ -53,9 +54,11 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.1",
     "viem": "^1.21.0",
-    "wagmi": "^1.4.12"
+    "wagmi": "^1.4.12",
+    "yup": "^1.3.3"
   }
 }
