--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
       "version": "detect"
     }
   },
+  "ignorePatterns": ["src/services/contracts/*"],
   "rules": {
     "@typescript-eslint/no-explicit-any": 1,
     "@typescript-eslint/no-unused-vars": 1
