--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
+    "@wagmi/cli": "^1.5.2",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
@@ -48,7 +49,8 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.3",
     "@mui/icons-material": "^5.15.2",
-    "@mui/material": "^5.15.1",
+    "@mui/lab": "^5.0.0-alpha.158",
+    "@mui/material": "^5.15.2",
     "@web3modal/wagmi": "^3.5.2",
     "axios": "^1.6.2",
     "notistack": "^3.0.1",
