--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
+    "noImplicitAny": false,
     "baseUrl": "./",
     "paths": {
       "@src/*": ["src/*"],
